integrated the html and css files

--- a/wisaga/templates/wisaga/home.html
+++ b/wisaga/templates/wisaga/home.html
@@ -1,10 +1,21 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Wisaga-Connecting Dots</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <link rel="stylesheet" type=" text/css" href="{% static 'wisaga/main.css' %}">
 </head>
 <body>
-    <h1>Home Page</h1>
+    <a id="logo" href="">Wisaga</a>
+    <a id="home" href="">Home</a>
+    <a id="about" href="">About Us</a>
+    <a id="courses" href="">Courses</a>
+    <a id="blogs" href="">Blogs</a>
+    <a id="contact" href="">Contact Us</a>
+    <p id="title">Wisaga</p>
+    <p id="desp"><b>Keep Learning, Keep Progressing</b><br> With a variety of courses offered in different fields you will surely find something that fits right to you and you can excel in.</p>
+    <a id="explore" href=""><p>Explore</p></a>
 </body>
+</html>
