Home page code update

--- a/wisaga/templates/wisaga/home.html
+++ b/wisaga/templates/wisaga/home.html
@@ -5,17 +5,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" type=" text/css" href="{% static 'wisaga/main.css' %}">
+    <link rel="stylesheet" type=" text/css" href="{% static 'wisaga/home.css' %}">
 </head>
 <body>
-    <a id="logo" href="">Wisaga</a>
-    <a id="home" href="">Home</a>
-    <a id="about" href="">About Us</a>
-    <a id="courses" href="">Courses</a>
-    <a id="blogs" href="">Blogs</a>
-    <a id="contact" href="">Contact Us</a>
-    <p id="title">Wisaga</p>
-    <p id="desp"><b>Keep Learning, Keep Progressing</b><br> With a variety of courses offered in different fields you will surely find something that fits right to you and you can excel in.</p>
-    <a id="explore" href=""><p>Explore</p></a>
+    
+    <div id="page1">
+        <div id="nav">
+            <p id="logo">Wisaga</p>
+
+            <p><a href="" id="home">Home</a></p>
+            <p><a href="" id="about">About Us</a></p>
+            <p><a href="" id="courses">Courses</a></p>
+            <p><a href="" id="contact">Contact Us</a></p>
+            <button id="signin">Sign In</button>
+        </div>
+        
+
+        <p id="title">Wisaga</p>
+        <p id="des">Keep Learning, Keep Progressing</p>
+        <p id="message">with a variety of courses offered in<br>different fields you will surely find<br>something that fits right to you and<br>you can excel in.</p>
+        <button id="explore">Explore</button>
+    </div>
+    
+    <div>
+        <p id="pt1">Learn at your own Pace</p>
+        <p id="txt1">We have designed a well defined unique path<br>(avoiding confusions) for mastering every skill. We<br>tell about the usage of the skill and provide<br>resources to learn,practice problems and graded<br>tests.</p>
+        <button id="btn1">Learn More</button>
+        <img src="img1.png" alt="" id="img1">
+
+        <p id="pt2">Lets learn Together</p>
+        <p id="txt2">We have built a large community of mentors as well<br>as learners and you can interact with them in the<br>discussion forums or by direct messages.</p>
+        <button id="btn2">Explore</button>
+        <img src="img2.png" alt="" id="img2">
+
+        <p id="pt3">Monitor your Growth</p>
+        <p id="txt3">We keep record of how far have you reached in any<br>course, ratings given on the basis of graded tests<br>and certificates on the completion of course.</p>
+        <button id="btn3">Learn More</button>
+        <img src="img3.png" alt="" id="img3">
+
+        <p id="pt4">Learn about the Industry</p>
+        <p id="txt4">We share blogs about the in-demand industry skills<br>on our Blogs page. These are insights and<br>experiences by mentors ,learners and we even try to<br>connect maximum people from the industry. It is<br>open for all so you can also contribute.</p>
+        <button id="btn4">Explore</button>
+        <img src="img4.png" alt="" id="img4">
+    </div>
+
 </body>
 </html>
