linked css of home page

--- a/wisaga/templates/wisaga/home.html
+++ b/wisaga/templates/wisaga/home.html
@@ -31,22 +31,22 @@
         <p id="pt1">Learn at your own Pace</p>
         <p id="txt1">We have designed a well defined unique path<br>(avoiding confusions) for mastering every skill. We<br>tell about the usage of the skill and provide<br>resources to learn,practice problems and graded<br>tests.</p>
         <button id="btn1">Learn More</button>
-        <img src="img1.png" alt="" id="img1">
+        <img src="{% static 'wisaga/img1.png' %}" alt="" id="img1">
 
         <p id="pt2">Lets learn Together</p>
         <p id="txt2">We have built a large community of mentors as well<br>as learners and you can interact with them in the<br>discussion forums or by direct messages.</p>
         <button id="btn2">Explore</button>
-        <img src="img2.png" alt="" id="img2">
+        <img src="{% static 'wisaga/img2.png' %}" alt="" id="img2">
 
         <p id="pt3">Monitor your Growth</p>
         <p id="txt3">We keep record of how far have you reached in any<br>course, ratings given on the basis of graded tests<br>and certificates on the completion of course.</p>
         <button id="btn3">Learn More</button>
-        <img src="img3.png" alt="" id="img3">
+        <img src="{% static 'wisaga/img3.png' %}" alt="" id="img3">
 
         <p id="pt4">Learn about the Industry</p>
         <p id="txt4">We share blogs about the in-demand industry skills<br>on our Blogs page. These are insights and<br>experiences by mentors ,learners and we even try to<br>connect maximum people from the industry. It is<br>open for all so you can also contribute.</p>
         <button id="btn4">Explore</button>
-        <img src="img4.png" alt="" id="img4">
+        <img src="{% static 'wisaga/img4.png' %}" alt="" id="img4">
     </div>
 
 </body>
